--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "pizzamafiosi",
   "version": "1.0.0",
   "description": "API de gestion Pizzaiole",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --exit",
+    "ingredient": "./node_modules/mocha/bin/mocha ingredientControllerSpec.js"
   },
   "repository": {
     "type": "git",
@@ -21,11 +22,11 @@
   "homepage": "https://github.com/Honayme/MeanStackPizzas#readme",
   "devDependencies": {
     "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "jsdoc": "^3.5.5",
     "mocha": "^4.0.1"
   },
   "dependencies": {
-    "_commentMongoose.version": "Erreur au lancement server.js avec la dernière version",
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
